# browser-agent

./: .gitignore  browser-agent.spec  main.py  pyinstaller_entry.py  pyproject.toml  requirements.txt
scripts/: build_sidecar.py
src/impretion_browser_agent/: __init__.py  __main__.py  app.py  config.py  protocol.py  runtime.py  security.py
src/impretion_browser_agent/browser/: __init__.py  runner.py
src/impretion_browser_agent/jobs/: __init__.py  manager.py  queue.py  storage.py
tests/: test_build_sidecar.py  test_protocol.py  test_queue.py  test_security.py  test_storage.py
